fixed junit tests
Issue #823